# fbpro98-play

./: ARCHITECTURE.md  README.md  STATUS.md  TEST_STATUS.md  TODO.md  pyproject.toml
spec/: PLY.md  fbpro_ply.hsl
specs/: PLY.md  fbpro98-ply.hexpat  fbpro_ply.hsl
src/fbpro98_play/: __init__.py  model.py  parser.py  reader.py  schema.py
tests/: conftest.py  test_parser.py
